Fixed base component in Sass and wrap class

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -48,3 +48,10 @@ body{
         background-color: $color-grey-2;
     }
 }
+
+.wrap {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1400px;
+    padding: 0 20px;
+}
