--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -8,13 +8,6 @@
     background-position: center;
 }
 
-.wrap {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1400px;
-    padding: 0 20px;
-}
-
 .home__inner {
     display: flex;
     justify-content: center;
